[project]
name = "resumatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[all]>=0.137.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain[all]>=1.3.10",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
]
